change to jar && reconfigure app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ######DataSource Configuration######
 # Connection URL for the database
-spring.datasource.url=jdbc:mysql://10.1.1.169:3306/bookstore
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 # Set the Server Port
 server.port=8080
 # Set Username and Password
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=ayadinouDB
+spring.datasource.password=ayadinou1601
 
 
 ######Hibernate Configuration######
