--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - mysqldb
+    restart: always
  
   mysqldb:
     image: mysql
