--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>web</groupId>
 	<artifactId>bookstore</artifactId>
 	<version>1.1.1</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>bookstore</name>
 	<description>BookStore Spring Boot Web Application</description>
 	
@@ -101,10 +101,10 @@
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
+				<artifactId>maven-jar-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>default-war</id>
+						<id>default-jar</id>
 						<phase>prepare-package</phase>
 					</execution>
 				</executions>
