--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ######DataSource Configuration######
 # Connection URL for the database
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
+spring.datasource.url=jdbc:mysql://mysqldb:3306/bookstore
 # Set the Server Port
 server.port=8080
 # Set Username and Password
