--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     image: mysql
     networks:
       - ourPPPDockerNetwork
+    ports:
+      - "3307:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=bookstore
