--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - ourPPPDockerNetwork    
+      - deploymentNetwork    
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
@@ -17,7 +17,7 @@ services:
     ports:
       - "5001:8080"
     networks:
-      - ourPPPDockerNetwork
+      - deploymentNetwork
     restart: always
     depends_on:
       - mysqldb
@@ -26,13 +26,13 @@ services:
     ports:
       - "5002:8080"
     networks:
-      - ourPPPDockerNetwork
+      - deploymentNetwork
     depends_on:
       - mysqldb 
   mysqldb:
     image: mysql
     networks:
-      - ourPPPDockerNetwork
+      - deploymentNetwork
     ports:
       - "3307:3306"
     environment:
@@ -44,4 +44,4 @@ services:
     restart: always
 
 networks:
-  ourPPPDockerNetwork: 
+  deploymentNetwork: 
