--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "8080:8080"
     networks:
+      -deploymentNetworkBrdiged
       - deploymentNetwork    
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
@@ -17,6 +18,7 @@ services:
     ports:
       - "5001:8080"
     networks:
+      -deploymentNetworkBrdiged
       - deploymentNetwork
       - ourPPPDockerNetwork
     restart: always
@@ -27,6 +29,7 @@ services:
     ports:
       - "5002:8080"
     networks:
+      -deploymentNetworkBrdiged
       - deploymentNetwork
       - ourPPPDockerNetwork
     depends_on:
@@ -34,7 +37,8 @@ services:
   
 networks:
   deploymentNetwork: 
+      driver: overlay
+  deploymentNetworkBrdiged: 
       driver: bridge
-
   ourPPPDockerNetwork: 
       driver: bridge
