--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - deploymentNetworkBrdiged
       - deploymentNetwork    
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
@@ -18,9 +17,7 @@ services:
     ports:
       - "5001:8080"
     networks:
-      - deploymentNetworkBrdiged
       - deploymentNetwork
-      - ourPPPDockerNetwork
     restart: always
     
   app2:
@@ -28,16 +25,27 @@ services:
     ports:
       - "5002:8080"
     networks:
-      - deploymentNetworkBrdiged
       - deploymentNetwork
-      - ourPPPDockerNetwork
     restart: always
 
-  
+  mysqldb:
+    image: mysql
+    ports:
+      - "3307:3306"
+    networks:
+      - deploymentNetwork
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=bookstore
+      - MYSQL_USER=ayadinouDB
+      - MYSQL_PASSWORD=ayadinou1601
+
+    volumes:
+      - /var/lib/docker/volumes/mysql-volume/_data:/var/lib/mysql
+      - ./script.sql:/docker-entrypoint-initdb.d/schema.sql
+
+    restart: always
+
 networks:
   deploymentNetwork: 
-      driver: bridge
-  deploymentNetworkBrdiged: 
-      driver: bridge
-  ourPPPDockerNetwork: 
-      driver: bridge
+ 
