--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - "5002:8080"
     networks:
       - ourPPPDockerNetwork
+    restart: always
     depends_on:
       - mysqldb 
   mysqldb:
